# 2023-april-m5-exercises

./: README.md
S2/: db.sqlite3
S3/: atualizazndo pet.txt  criando pet.txt
S4/: cheats.txt
S6/: POETRY COMMANDS.txt
S6/poetry test/: .gitignore  manage.py  pyproject.toml
S6/poetry test/_test1/: asgi.py  settings.py  urls.py  wsgi.py
S6/poetry test/accounts/: models.py
S6/poetry test/accounts/management/commands/: create_multiple_users.py
S6/poetry test/accounts/migrations/: 0001_initial.py
